Add mobile menu + mobile splash screen  stable update

--- a/css/menu.css
+++ b/css/menu.css
@@ -544,7 +544,7 @@
 }
 
 
-/* Для мобильных экранов до 480px */
+/* Мобильные устройства — экраны до 480px */
 @media (max-width: 480px) {
 
     /* Адаптируем обычное меню под мобильное */
