--- a/css/deposit.css
+++ b/css/deposit.css
@@ -144,7 +144,7 @@
   max-width: 400px;
   padding: 10px 16px;
   font-size: 16px;
-  background: #F5F5F5;
+  background-color: #F5F5F5;
   border-radius: 12px;
   border: 1px solid #ccc;
   margin-bottom: 15px;
