Update promocode system fix v4

--- a/css/deposit.css
+++ b/css/deposit.css
@@ -146,7 +146,7 @@
   font-size: 16px;
   background-color: #F5F5F5;
   border-radius: 12px;
-  border: 1px solid #ccc;
+  border: none;
   margin-bottom: 15px;
   box-sizing: border-box;
   text-align: center;
