--- a/css/deposit.css
+++ b/css/deposit.css
@@ -139,7 +139,7 @@
 }
 
 /* Поле ввода */
-#promoInput {
+#promoInput .promocode-input {
   width: 100%;
   max-width: 400px;
   padding: 10px 16px;
