--- a/css/deposit.css
+++ b/css/deposit.css
@@ -127,19 +127,19 @@
   align-items: center;
 }
 
-#promo h2 {
+.promocode-title {
   margin-bottom: 10px;
   font-weight: bold;
 }
 
-#promo .description-promocode {
+.description-promocode {
   text-align: center;
   margin-bottom: 20px;
   color: #555;
 }
 
 /* Поле ввода */
-#promoInput .promocode-input {
+.promocode-input {
   width: 100%;
   max-width: 400px;
   padding: 10px 16px;
