--- a/css/deposit.css
+++ b/css/deposit.css
@@ -254,7 +254,17 @@
     padding: 0;
   }
 
-  #promoInput,
+  .promocode-title {
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+
+  .description-promocode {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .promocode-input,
   #promoMessageContainer {
     max-width: 100%;
     width: 100%;
