--- a/css/deposit.css
+++ b/css/deposit.css
@@ -255,13 +255,15 @@
   }
 
   .promocode-title {
+    font-size: 22px;
     margin-bottom: 10px;
     font-weight: bold;
   }
 
   .description-promocode {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+    font-size: 13px;
   }
 
   .promocode-input,
