--- a/css/modal_premium.css
+++ b/css/modal_premium.css
@@ -97,21 +97,20 @@
 }
 
 .modal-premium-subscribe-price {
-  font-weight: bold;
   font-size: 1.05rem;
   margin: 20px 0;
 }
 
 .modal-premium-subscribe-button {
   padding: 10px 20px;
-  background-color: black;
+  background-color: #007bff;
   color: white;
   border: none;
   border-radius: 14px;
   font-weight: bold;
   font-size: 1rem;
   cursor: pointer;
-  width: 100%;
+  width: 90%;
   transition: background 0.3s ease;
 }
 
